# apis-edge

./: .env.example  .env.saas.example  .env.standalone.example  .gitignore  .sops.yaml  CLAUDE.md  CMakeLists.txt  E2E-TEST-PLAN.md  E2E-TEST-RESULTS.md  INTEGRATION-POINTS-REFERENCE.md  INTEGRATION-REVIEW-EPICS-1-2.md  INTEGRATION-REVIEW-INDEX.md  INTEGRATION-REVIEW-SUMMARY.md  QUICK-INTEGRATION-TEST.md  README.md  REMEDIATION.md  docker-compose.demo.yml  docker-compose.yml  onboarding.md  package-lock.json  package.json  playwright.config.ts  release-handoff.md  report.md
.claude/: piper-voices-dir.txt
_security-audit/: FINAL-REPORT-V2.md  FINAL-REPORT.md  README.md  REPO-SECURITY-ACCEPTANCE-CRITERIA.md  SECURITY-REVIEW-2026-02-06.md  epic-15-security-review.md  full-review-summary.md  remediation-tracker.yaml  review-stream-1-auth-security.md  review-stream-2-data-layer.md  review-stream-3a-core-handlers.md  review-stream-3b-extended-handlers.md  review-stream-4-dashboard-auth.md  review-stream-5-dashboard-components.md  review-stream-6-dashboard-offline.md  review-stream-7-edge-safety.md  review-stream-8-edge-comms.md
_validation/: BROWSER-VALIDATION-REPORT.md
apis-dashboard/: .dockerignore  Dockerfile.dev  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apis-edge/: CMakeLists.txt  README.md  config.yaml
apis-edge/.cache/clangd/index/: button_handler.c.214FD0355903D0CB.idx  button_handler.h.0796D2238C7F07E6.idx  cJSON.c.44710313C89AD561.idx  cJSON.h.023559D86A25F1C2.idx  clip_uploader.c.00AC5DF1B9E36660.idx  clip_uploader.h.6CCAC47CF4C3EDF2.idx  config.c.3A08EDEA6AF549D2.idx  config.h.A839A7AD67AF02CE.idx  config_manager.c.71DE7C5CBD9C859D.idx  config_manager.h.C192708282504FF7.idx  coordinate_mapper.c.A6FF1D259A871F90.idx  coordinate_mapper.h.4611FC1A4AFAD71A.idx  http_server.c.34AF2BFF47E38D41.idx  http_server.h.43B2ABE13ABF7B10.idx  laser_controller.c.0A679709B99DA39A.idx  laser_controller.h.2F054B6E20FE81D3.idx  led_controller.c.D5CE402D55DF65C3.idx  led_controller.h.89FAA6A7B96F9508.idx  log.c.5FC567F79EF1D991.idx  log.h.DE0FDA75E4C57521.idx  platform.h.1820FB3E836E2C4C.idx  server_comm.c.F9DE8E9FCC0A5769.idx  server_comm.h.29D47F723E161078.idx  servo_controller.c.8A2B89A9CFD57632.idx  servo_controller.h.570D45DC1BAA37D7.idx  targeting.c.A4C080E959848DFD.idx  targeting.h.71FF0982760C69E2.idx  test_button_handler.c.52965EF53F5D5731.idx  test_clip_uploader.c.7039AA803CAF8986.idx  test_config_manager.c.ACBE11DEA1D1032C.idx  test_coordinate_mapper.c.3EEA813B834805A2.idx  test_http_server.c.2CE0F8B70CE9F6B7.idx  test_laser_controller.c.3EF154DECF3CAA2B.idx  test_led_controller.c.ABA1FF4A21DDD4D2.idx  test_server_comm.c.0F9DF7D709E3A219.idx  test_servo_controller.c.5D77B02853AD1738.idx  test_targeting.c.9048118B15E6EBFE.idx
apis-edge/hal/: camera.h
apis-edge/hal/esp32/: camera_esp32.c  event_logger_stub.c
apis-edge/hal/pi/: camera_pi.c
apis-edge/hal/storage/esp32/: sqlite_esp32.c
apis-edge/hal/storage/pi/: sqlite_pi.c
apis-edge/include/: button_handler.h  clip_recorder.h  clip_uploader.h  config.h  config_manager.h  coordinate_mapper.h  detection.h  frame.h  http_server.h  laser_controller.h  led_controller.h  log.h  onboarding_defaults.h  platform_mutex.h  rolling_buffer.h  safety_layer.h  server_comm.h  servo_controller.h  storage_manager.h  targeting.h  tls_client.h  tracker.h
apis-edge/pi/: README.md  main.py  requirements.txt
apis-edge/pi/camera/: base.py  usb.py
apis-edge/pi/config/: __init__.py  settings.py
apis-edge/pi/tests/: __init__.py
apis-edge/src/: config.c  log.c  main.c
apis-edge/src/button/: button_handler.c
apis-edge/src/config/: config_manager.c
apis-edge/src/detection/: classifier.c  motion.c  tracker.c
apis-edge/src/dns/: captive_dns.c
apis-edge/src/http/: http_rate_limit.c  http_server.c  http_utils.c
apis-edge/src/laser/: coordinate_mapper.c  laser_controller.c  targeting.c
apis-edge/src/led/: led_controller.c
apis-edge/src/mdns/: mdns_discovery.c
apis-edge/src/safety/: safety_layer.c
apis-edge/src/server/: server_comm.c
apis-edge/src/servo/: servo_controller.c
apis-edge/src/storage/: clip_recorder.c  event_logger.c  rolling_buffer.c  storage_manager.c
apis-edge/src/tls/: tls_client.c
apis-edge/src/upload/: clip_uploader.c
apis-edge/src/wifi/: wifi_provision.c
apis-edge/tests/: test_button_handler.c  test_camera.c  test_classifier.c  test_clip_recorder.c  test_clip_uploader.c  test_config_manager.c  test_coordinate_mapper.c  test_event_logger.c  test_http_server.c  test_laser_controller.c  test_safety_layer.c  test_server_comm.c  test_servo_controller.c  test_targeting.c  test_tracker.c
apis-server/: .dockerignore  Dockerfile  go.mod  go.sum
docs/: AI_EPIC_CODE_REVIEW_PROMPT.md  DEPLOYMENT-MODES.md  FR-DUAL-AUTH-MODE.md  INFRASTRUCTURE-INTEGRATION.md  PRD-ADDENDUM-DUAL-AUTH-MODE.md  SECRETS-MANAGEMENT.md  hardware-specification.md
hal/: camera.h
include/: button_handler.h  captive_dns.h  classifier.h  clip_recorder.h  clip_uploader.h  config_manager.h  coordinate_mapper.h  event_logger.h  frame.h  http_rate_limit.h  http_recv.h  http_server.h  http_utils.h  laser_controller.h  mdns_discovery.h  onboarding_defaults.h  platform.h  psram_alloc.h  qr_scanner.h  rolling_buffer.h  safety_layer.h  secure_util.h  server_comm.h  targeting.h  time_util.h  tls_client.h  wifi_provision.h
keycloak/: realm-honeybee.json
pi-legacy/: config.yaml
scripts/: bootstrap-openbao.sh  init-yugabytedb.sh  ssik-connectivity.sh  unseal-openbao.sh  verify-epic-0.sh
secrets/: README.md  secrets.enc.yaml  secrets.template.yaml  ssik-ci-secrets.sops.yaml
src/: config.c  main.c
tests/: test_button_handler.c  test_clip_recorder.c  test_clip_uploader.c  test_config_manager.c  test_coordinate_mapper.c  test_framework.h  test_http_server.c  test_laser_controller.c  test_led_controller.c  test_motion.c  test_qr_scanner.c  test_safety_interlock.c  test_safety_layer.c  test_server_comm.c  test_servo_controller.c  test_targeting.c  test_targeting_threadsafe.c
(+1203 files in other folders)
